[package]
name = "os"
version = "0.1.0"
authors = ["shinbokuow <wyfcyx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.3.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
bit_field = "0.10.0"
bitflags = "1.2.1"
hashbrown = "0.7.2"
xmas-elf = "0.7.0"
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs" }
rcore-fs-sfs = { git = "https://github.com/rcore-os/rcore-fs"  }



[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

